# The-Data-Packet

./: .dockerignore  .env.example  .env.template  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  Dockerfile  MONGODB.md  PACKAGE_SUMMARY.md  README.md  RSS_MANAGEMENT.md  SIMPLE_USAGE.md  USAGE.md  _config.yml  episode_script.txt  mongodb.sh  pyproject.toml  zensical.toml
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  pipeline-deploy.yml  pr-checks.yml  python-build.yml  python-package.yml  weekly-health.yml
docs/: CNAME  LOGGING.md  README.md  index.md
docs/api/: cli.md
docs/api/core/: config.md  exceptions.md  logging.md
docs/api/generation/: audio.md  rss.md  script.md
docs/api/sources/: base.md  techcrunch.md  wired.md
docs/api/utils/: http.md  loki.md  mongodb.md  s3.md
docs/api/workflows/: podcast.md
docs/configuration/: index.md
docs/contributing/: development.md  index.md
docs/getting-started/: index.md  installation.md  usage.md
docs/infrastructure/: docker.md  index.md  logging.md  mongodb.md  terraform.md
docs/overview/: architecture.md  index.md
docs/source/: conf.py  index.rst
docs/source/api/: core.rst  extractors.rst  generation.rst  scrapers.rst  sources.rst  storage.rst  workflows.rst
docs/source/development/: testing.rst
infra/: README.md  main.tf  terraform.tf  terraform.tfvars
sphinx/: conf.py
sphinx/api/: cli.rst  sources.rst  utils.rst
sphinx/development/: testing.rst
terraform/: .terraform.lock.hcl  main.tf  terraform.tf
tests/: README.md  __init__.py  conftest.py  run_tests.py  test___about__.py  test___init__.py  test_ai.py  test_audio.py  test_cli.py  test_clients.py  test_config.py  test_core.py  test_extractors.py  test_integration.py  test_models.py  test_scrapers.py  test_workflows.py
tests/ai/: test_ai_init.py  test_claude_client.py  test_prompts.py  test_script_generator.py
tests/audio/: test_audio_init.py  test_tts_generator.py
tests/clients/: test_clients_init.py  test_http_client.py  test_rss_client.py
tests/config/: test_config_exceptions.py  test_config_init.py  test_settings.py
tests/core/: test___init__.py  test_config.py  test_core_exceptions.py  test_core_init.py  test_exceptions.py  test_logging.py  test_logging_config.py
tests/extractors/: test_extractors_init.py  test_wired_extractor.py
tests/generation/: __init__.py  test___init__.py  test_audio.py  test_rss.py  test_script.py
tests/models/: test_article.py  test_models_init.py
tests/scrapers/: test_scrapers_init.py  test_wired_scraper.py
tests/sources/: __init__.py  test___init__.py  test_base.py  test_techcrunch.py  test_techcrunch_simple.py  test_wired.py  test_wired_fixed.py  test_wired_simple.py
tests/utils/: test___init__.py  test_http.py  test_loki.py  test_mongodb.py  test_s3.py
tests/workflows/: __init__.py  test___init__.py  test_pipeline_config.py  test_podcast.py  test_podcast_pipeline.py  test_workflows_init.py
the_data_packet/: __about__.py  __init__.py  cli.py
the_data_packet/ai/: __init__.py  claude_client.py  prompts.py  script_generator.py
the_data_packet/audio/: __init__.py  tts_generator.py
the_data_packet/clients/: __init__.py  http_client.py  rss_client.py
the_data_packet/config/: __init__.py  exceptions.py  settings.py
the_data_packet/core/: __init__.py  config.py  exceptions.py  logging.py  logging_config.py
the_data_packet/extractors/: __init__.py  wired_extractor.py
the_data_packet/genai/: README.md  create_podcast.py  example.py  generate.py  prompts.py
the_data_packet/generation/: __init__.py  audio.py  rss.py  script.py
the_data_packet/models/: __init__.py  article.py
the_data_packet/scrapers/: __init__.py  wired_scraper.py
the_data_packet/sources/: __init__.py  base.py  techcrunch.py  wired.py
the_data_packet/utils/: __init__.py  claude_client.py  http.py  loki.py  mongodb.py  s3.py
the_data_packet/workflows/: __init__.py  pipeline_config.py  podcast.py  podcast_pipeline.py
