# ==============================================================================
# BUILD SYSTEM
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the_data_packet"
dynamic = ["version"]
description = "Automated podcast generation from news articles using AI with MongoDB episode tracking"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["podcast", "ai", "automation", "news", "scraping", "tts", "claude", "google-cloud", "text-to-speech", "s3", "aws", "storage", "mongodb", "episode-tracking", "deduplication", "long-audio-synthesis"]
dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "tenacity>=8.0.0",
    "anthropic>=0.25.0",
    "boto3>=1.20.0",
    "pymongo",
    # Google Cloud dependencies for TTS Long Audio Synthesis
    "google-cloud-texttospeech>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.17.0",
    "pydub",
]
authors = [
  { name = "TheWinterShadow", email = "elijah.j.winter@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://thewintershadow.github.io/the_data_packet/"
Homepage = "https://github.com/TheWinterShadow/the_data_packet"
Repository = "https://github.com/TheWinterShadow/the_data_packet"
Issues = "https://github.com/TheWinterShadow/the_data_packet/issues"
Changelog = "https://github.com/TheWinterShadow/the_data_packet/blob/main/CHANGELOG.md"

[project.scripts]
the-data-packet = "the_data_packet.cli:main"

# ==============================================================================
# HATCH CONFIGURATION
# ==============================================================================
[tool.hatch.version]
path = "the_data_packet/__about__.py"

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["the_data_packet"]

[tool.hatch.build.targets.sdist]
include = [
  "the_data_packet/",
  "README.md",
  "LICENSE.txt",
]
exclude = [
  "tests/",
  "docs/",
  ".github/",
  "*.pyc",
  "__pycache__/",
]

# ==============================================================================
# HATCH ENVIRONMENTS
# ==============================================================================
[tool.hatch.envs.default]
dependencies = [
  # Testing
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  # Formatting and linting
  "black",
  "isort", 
  "mypy",
  # Type stubs for better type checking
  "types-requests",
]

[tool.hatch.envs.dev]
dependencies = [
  # Core dependencies
  "feedparser>=6.0.0",
  "requests>=2.25.0",
  "pymongo",
  "beautifulsoup4>=4.9.0",
  "tenacity>=8.0.0",
  "anthropic>=0.25.0",
  "boto3>=1.20.0",
  # Google Cloud dependencies
  "google-cloud-texttospeech>=2.16.0",
  "google-cloud-storage>=2.10.0",
  "google-auth>=2.17.0",
  "pydub",
  # Development tools
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "types-requests>=2.28.11",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "bandit>=1.7.0",
  "flake8-pyproject>=0.18.0",
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "furo", 
  "myst-parser",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build"
clean = "sphinx-build -b html -E docs/source docs/build"
serve = "python -m http.server 8000 --directory docs/build"

# ==============================================================================
# HATCH SCRIPTS
# ==============================================================================
[tool.hatch.envs.default.scripts]
# Format code
format = [
  "isort the_data_packet tests",
  "black the_data_packet tests",
]

# Check formatting
format-check = [
  "isort --check the_data_packet tests",
  "black --check the_data_packet tests",
  "flake8 the_data_packet tests",
]

# Type checking
typecheck = "mypy --exclude 'docs' the_data_packet"

# Full quality check pipeline
check = [
  "format",
  "format-check", 
  "typecheck",
]

# Testing scripts
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov", 
  "cov-report",
]

# Documentation scripts
docs = "sphinx-build -b html docs/source docs/build"
docs-clean = "sphinx-build -b html -E docs/source docs/build"
docs-serve = "python -m http.server 8000 --directory docs/build"

# Build pipeline
pre-build = [
  "format",
  "format-check",
  "typecheck",
]
build = "hatch build"
clean = "hatch clean"

# Full build pipeline (equivalent to your bb command)
bb = [
  "format",
  "format-check", 
  "typecheck",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# ==============================================================================
# TOOL CONFIGURATION
# ==============================================================================

# Coverage configuration
[tool.coverage.run]
source_pkgs = ["the_data_packet", "tests"]
branch = true
parallel = true
omit = [
  "the_data_packet/__about__.py",
]

[tool.coverage.paths]
the_data_packet = ["the_data_packet", "*/the_data_packet/the_data_packet"]
tests = ["tests", "*/the_data_packet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

# Linting configuration
[tool.flake8]
max-line-length = 120

# Type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["docs/.*"]
# Allow imports that might not be available at runtime (like type stubs)
ignore_missing_imports = true
# Show error codes for easier debugging
show_error_codes = true
# Be strict about TYPE_CHECKING imports
warn_unused_ignores = true
